feat: implement RAG multimodal image understanding with Ollama
Add image upload capability to RAG chat using Spring AI multimodal API.
Users can now attach up to 5 images when asking questions about documents.
The VisionChatUseCase leverages Ollama's vision capabilities to analyze
images and provide context-aware responses.

Changes:
- Backend: VisionChatUseCase for multimodal chat processing
- Frontend: Image upload UI with preview and delete
- API: Extended RagChatRequest with images field

References:
- [Spring AI Reference - Multimodality](https://docs.spring.io/spring-ai/reference/api/multimodality.html)
- [Ollama Models - qwen2.5vl](https://ollama.com/library/qwen2.5vl)
- [Multimodality API - Spring AI Reference](https://docs.spring.io/spring-ai/reference/api/multimodality.html)

Co-authored-by: Cursor <cursoragent@cursor.com>